@@ -1,12 +1,13 @@
 package com.eng2marketplace.controller;
 
 import com.eng2marketplace.model.Comprador;
-import org.junit.jupiter.api.AfterEach;
+import com.eng2marketplace.repository.CompradorRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.io.File;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -14,19 +15,11 @@ import static org.junit.jupiter.api.Assertions.*;
  * Teste de unidade do controlador de compradores.
  */
 class CompradorControllerTest {
-    private static final String TEST_FILE_PATH = "src/main/data/compradores.json";
 
     @BeforeEach
-    @AfterEach
     void cleanUp() {
-        // Garante que o arquivo de teste seja deletado antes e depois de cada teste
-        File file = new File(TEST_FILE_PATH);
-        if (file.exists()) {
-            file.delete();
-        }
-        
-        // Garante que o diretório data existe
-        new File("./data").mkdirs();
+        CompradorRepository repo = new CompradorRepository();
+        repo.limpar();
     }
 
     /**
@@ -40,10 +33,24 @@ class CompradorControllerTest {
         List<Comprador> result = control.listarCompradores();
 
         assertEquals(1, result.size());
-        Comprador comprador = result.get(0);
+        Comprador comprador = result.getFirst();
         assertEquals("Joana Ferreira", comprador.getNome());
         assertEquals("jfjf@mail.ko", comprador.getEmail());
-        assertEquals("074.821.754-03", comprador.getCpf());
+        assertEquals("07482175403", comprador.getCpf());
+    }
+    /**
+     * Testa persistir instância de comprador com cpf inválido
+     */
+    @Test
+    void testSalvarCPFInvalido() {
+        CompradorController control = new CompradorController();
+
+        try {
+            control.adicionarComprador("Joana Ferreira", "jfjf@mail.ko", "321321", "3", "Rua Margaridas, Número 123");
+            fail();
+        } catch(IllegalArgumentException e) {
+            assertTrue(true);
+        }
     }
 
     /**
@@ -71,10 +78,10 @@ class CompradorControllerTest {
         assertEquals(2, result.size());
         assertEquals("Joana Ferreira", result.get(0).getNome());
         assertEquals("Ana Pontes", result.get(1).getNome());
-        
+
         // Verifica se os CPFs estão corretos
-        assertEquals("074.821.754-03", result.get(0).getCpf());
-        assertEquals("072.891.939-05", result.get(1).getCpf());
+        assertEquals("07482175403", result.get(0).getCpf());
+        assertEquals("07289193905", result.get(1).getCpf());
     }
 
     /**
@@ -113,7 +120,7 @@ class CompradorControllerTest {
         control.adicionarComprador("Joana Ferreira", "jfjf@mail.ko", "321321", "074.821.754-03", "Avenida Predial 955/B");
         control.adicionarComprador("Ana Pontes", "anabanana@mail.ko", "123123", "072.891.939-05", "Rua Marimbondo Caboclo, 3001");
 
-        boolean result = control.removerComprador("074.821.754-03");
+        boolean result = control.removerComprador("07482175403");
 
         assertTrue(result);
         List<Comprador> compradores = control.listarCompradores();
@@ -128,14 +135,14 @@ class CompradorControllerTest {
     void testAdicionarCompradorComCpfDuplicado() {
         CompradorController control = new CompradorController();
         control.adicionarComprador("Joana Ferreira", "jfjf@mail.ko", "321321", "074.821.754-03", "Avenida Predial 955/B");
-        
+
         // Verifica se lança exceção ao tentar adicionar duplicado
         IllegalArgumentException exception = assertThrows(IllegalArgumentException.class, () -> {
             control.adicionarComprador("Joana Silva", "jf2@mail.ko", "654321", "074.821.754-03", "Outro endereço");
         });
-        
+
         assertEquals("Já existe um comprador cadastrado com este CPF", exception.getMessage());
-        
+
         List<Comprador> compradores = control.listarCompradores();
         assertEquals(1, compradores.size()); // Deve manter apenas o primeiro
         assertEquals("Joana Ferreira", compradores.get(0).getNome());
@@ -145,28 +152,302 @@ class CompradorControllerTest {
      * Testa buscar comprador por CPF
      */
     @Test
-void testBuscarPorCpf_Encontrado() {
-    CompradorController controller = new CompradorController();
-    controller.adicionarComprador("João Silva", "joao@email.com", "senha123", "123.456.789-09", "Rua A, 123");
-    
-    Comprador encontrado = controller.buscarCompradorPorCpf("123.456.789-09");
-    
-    assertNotNull(encontrado);
-    assertEquals("João Silva", encontrado.getNome());
-}
+    void testBuscarPorCpf_Encontrado() {
+        CompradorController controller = new CompradorController();
+        controller.adicionarComprador("João Silva", "joao@email.com", "senha123", "123.456.789-09", "Rua A, 123");
 
+        Comprador encontrado = controller.buscarCompradorPorCpf("123.456.789-09");
 
+        assertNotNull(encontrado);
+        assertEquals("João Silva", encontrado.getNome());
+    }
 
-@Test
-void testBuscarPorCpf_FormatoInvalido() {
-    CompradorController controller = new CompradorController();
-    
-    assertThrows(IllegalArgumentException.class, () -> {
-        controller.buscarCompradorPorCpf("123"); // CPF muito curto
-    });
-    
-    assertThrows(IllegalArgumentException.class, () -> {
-        controller.buscarCompradorPorCpf(null); // CPF nulo
-    });
-}
+    @Test
+    void testBuscarPorCpf_FormatoInvalido() {
+        CompradorController controller = new CompradorController();
+
+        assertThrows(IllegalArgumentException.class, () -> {
+            controller.buscarCompradorPorCpf("123"); // CPF muito curto
+        });
+
+        assertThrows(IllegalArgumentException.class, () -> {
+            controller.buscarCompradorPorCpf(""); // CPF vazio
+        });
+
+        assertThrows(IllegalArgumentException.class, () -> {
+            controller.buscarCompradorPorCpf(null); // CPF nulo
+        });
+    }
+
+    @Test
+    void testLogin() {
+        CompradorRepository repo = new CompradorRepository();
+        repo.salvar(new Comprador("Elisabeth", "lisa@email.com", "tudocerto", "410.883.267-31", "Rua M, 90"));
+
+        CompradorController controller = new CompradorController();
+        boolean loginOk = controller.login("410.883.267-31", "tudocerto");
+
+        assertTrue(loginOk);
+    }
+
+    @Test
+    void testLoginFailSenha() {
+        CompradorRepository repo = new CompradorRepository();
+        repo.salvar(new Comprador("Elisabeth", "lisa@email.com", "tudocerto", "410.883.267-31", "Rua M, 90"));
+
+        CompradorController controller = new CompradorController();
+        boolean loginOk = controller.login("410.883.267-31", "");
+
+        assertFalse(loginOk);
+    }
+
+    @Test
+    void testLoginFailCPF() {
+        CompradorRepository repo = new CompradorRepository();
+        repo.salvar(new Comprador("Elisabeth", "lisa@email.com", "tudocerto", "410.883.267-31", "Rua M, 90"));
+
+        CompradorController controller = new CompradorController();
+        boolean loginOk = controller.login("000.000.000-00", "tudocerto");
+
+        assertFalse(loginOk);
+    }
+
+    @Test
+    void testLoginFailTooMuch() {
+        CompradorRepository repo = new CompradorRepository();
+        repo.salvar(new Comprador("Elisabeth", "lisa@email.com", "tudocerto", "410.883.267-31", "Rua M, 90"));
+
+        CompradorController controller = new CompradorController();
+        try {
+            for(int i=0; i<10; i++)
+                controller.login("410.883.267-31", "");
+            fail();
+        } catch (IllegalStateException e) {
+            assertTrue(true);
+        }
+    }
+
+    @Test
+    void testLogout() {
+        CompradorRepository repo = new CompradorRepository();
+        repo.salvar(new Comprador("Vanessa", "nessa2@email.com", "1111111", "723.863.667-04", "Rua M, 90"));
+        CompradorController controller = new CompradorController();
+        controller.login("723.863.667-04", "1111111");
+
+        controller.logout();
+
+        assertFalse(controller.isLoggedIn());
+    }
+
+    @Test
+    void testIsLoggedIn() {
+        CompradorRepository repo = new CompradorRepository();
+        repo.salvar(new Comprador("Natália", "tantan@email.com", "çáááááá", "514.332.689-27", "Rua M, 90"));
+        CompradorController controller = new CompradorController();
+        controller.login("514.332.689-27", "çáááááá");
+
+        boolean resultado = controller.isLoggedIn();
+
+        assertTrue(resultado);
+    }
+
+    @Test
+    void testGetCompradorLogado() {
+        CompradorRepository repo = new CompradorRepository();
+        repo.salvar(new Comprador("Jocimar", "jcmr@email.com", "ehehehehe", "143.326.890-92", "Rua M, 33"));
+        CompradorController controller = new CompradorController();
+        controller.login("143.326.890-92", "ehehehehe");
+
+        Comprador resultado = controller.getCompradorLogado();
+
+        assertEquals("143.326.890-92", resultado.getCpf());
+    }
+
+    @Test
+    void testGetCompradorLogadoSemLogar() {
+        CompradorController controller = new CompradorController();
+
+        Comprador resultado = controller.getCompradorLogado();
+
+        assertNull(resultado);
+    }
+
+    @Test
+    void testGetCarrinho() {
+        CompradorRepository repo = new CompradorRepository();
+        repo.salvar(new Comprador("Adriano", "diano@email.com", "21071998", "430.269.900-21", "Rua M, 45"));
+        CompradorController controller = new CompradorController();
+        controller.login("430.269.900-21", "21071998");
+        controller.adicionarAoCarrinho("1111", 5);
+
+        Map<String, Integer> result = controller.getCarrinho();
+
+        assertFalse(result.isEmpty());
+        assertEquals(5, result.get("1111"));
+    }
+
+    @Test
+    void testGetCarrinhoSemLogar() {
+        CompradorController controller = new CompradorController();
+
+        try {
+            controller.getCarrinho();
+            fail();
+        } catch(IllegalStateException e) {
+            assertTrue(true);
+        }
+    }
+
+    @Test
+    void testAdicionarAoCarrinho() {
+        CompradorRepository repo = new CompradorRepository();
+        repo.salvar(new Comprador("Adriano", "diano@email.com", "21071998", "430.269.900-21", "Rua M, 45"));
+        CompradorController controller = new CompradorController();
+        controller.login("430.269.900-21", "21071998");
+
+        boolean ok = controller.adicionarAoCarrinho("1111", 5);
+
+        assertTrue(ok);
+        Comprador teste = repo.buscarPorCpf("430.269.900-21").orElseThrow();
+        assertEquals(1, teste.getCarrinho().size());
+    }
+
+    @Test
+    void testAdicionarAoCarrinhoQuantidadeInvalida() {
+        CompradorRepository repo = new CompradorRepository();
+        repo.salvar(new Comprador("Adriano", "diano@email.com", "21071998", "430.269.900-21", "Rua M, 45"));
+        CompradorController controller = new CompradorController();
+        controller.login("430.269.900-21", "21071998");
+
+        boolean ok = controller.adicionarAoCarrinho("1111", 0);
+
+        assertFalse(ok);
+        Comprador teste = repo.buscarPorCpf("430.269.900-21").orElseThrow();
+        assertEquals(0, teste.getCarrinho().size());
+    }
+
+    @Test
+    void testAdicionarAoCarrinhoSemLogar() {
+        CompradorController controller = new CompradorController();
+
+        try {
+            controller.adicionarAoCarrinho("1111", 5);
+            fail();
+        } catch(IllegalStateException e) {
+            assertTrue(true);
+        }
+    }
+
+    @Test
+    void testRemoverDoCarrinho() {
+        CompradorRepository repo = new CompradorRepository();
+        repo.salvar(new Comprador("Adriano", "diano@email.com", "21071998", "430.269.900-21", "Rua M, 45"));
+        CompradorController controller = new CompradorController();
+        controller.login("430.269.900-21", "21071998");
+        controller.adicionarAoCarrinho("1111", 5);
+        controller.adicionarAoCarrinho("2222", 5);
+
+        controller.removerDoCarrinho("2222");
+
+        Comprador teste = repo.buscarPorCpf("430.269.900-21").orElseThrow();
+        assertEquals(1, teste.getCarrinho().size());
+    }
+
+    @Test
+    void testRemoverItemInexistenteDoCarrinho() {
+        CompradorRepository repo = new CompradorRepository();
+        repo.salvar(new Comprador("Adriano", "diano@email.com", "21071998", "430.269.900-21", "Rua M, 45"));
+        CompradorController controller = new CompradorController();
+        controller.login("430.269.900-21", "21071998");
+        controller.adicionarAoCarrinho("1111", 5);
+        controller.adicionarAoCarrinho("2222", 5);
+
+        boolean ok = controller.removerDoCarrinho("3333");
+
+        assertFalse(ok);
+        Comprador teste = repo.buscarPorCpf("430.269.900-21").orElseThrow();
+        assertEquals(2, teste.getCarrinho().size());
+    }
+
+    @Test
+    void testRemoverAoCarrinhoSemLogar() {
+        CompradorController controller = new CompradorController();
+
+        try {
+            controller.removerDoCarrinho("1111");
+            fail();
+        } catch(IllegalStateException e) {
+            assertTrue(true);
+        }
+    }
+
+    @Test
+    void testLimparCarrinho() {
+        CompradorRepository repo = new CompradorRepository();
+        repo.salvar(new Comprador("Adriano", "diano@email.com", "21071998", "430.269.900-21", "Rua M, 45"));
+        CompradorController controller = new CompradorController();
+        controller.login("430.269.900-21", "21071998");
+        controller.adicionarAoCarrinho("1111", 5);
+        controller.adicionarAoCarrinho("2222", 5);
+
+        controller.limparCarrinho();
+
+        Comprador teste = repo.buscarPorCpf("430.269.900-21").orElseThrow();
+        assertTrue(teste.getCarrinho().isEmpty());
+    }
+
+    @Test
+    void testLimparCarrinhoSemLogar() {
+        CompradorController controller = new CompradorController();
+
+        try {
+            controller.limparCarrinho();
+            fail();
+        } catch(IllegalStateException e) {
+            assertTrue(true);
+        }
+    }
+
+    @Test
+    void testAlterarQuantidadeCarrinho() {
+        CompradorRepository repo = new CompradorRepository();
+        repo.salvar(new Comprador("Adriano", "diano@email.com", "21071998", "430.269.900-21", "Rua M, 45"));
+        CompradorController controller = new CompradorController();
+        controller.login("430.269.900-21", "21071998");
+        controller.adicionarAoCarrinho("1111", 5);
+        controller.adicionarAoCarrinho("2222", 5);
+
+        controller.alterarQuantidadeCarrinho("1111", 10);
+
+        Comprador teste = repo.buscarPorCpf("430.269.900-21").orElseThrow();
+        assertEquals(10, teste.getCarrinho().get("1111"));
+    }
+
+    @Test
+    void testAlterarQuantidadeCarrinhoInvalida() {
+        CompradorRepository repo = new CompradorRepository();
+        repo.salvar(new Comprador("Adriano", "diano@email.com", "21071998", "430.269.900-21", "Rua M, 45"));
+        CompradorController controller = new CompradorController();
+        controller.login("430.269.900-21", "21071998");
+        controller.adicionarAoCarrinho("1111", 5);
+        controller.adicionarAoCarrinho("2222", 5);
+
+        boolean ok = controller.alterarQuantidadeCarrinho("1111", 0);
+
+        assertFalse(ok);
+        Comprador teste = repo.buscarPorCpf("430.269.900-21").orElseThrow();
+        assertEquals(5, teste.getCarrinho().get("1111"));
+    }
+
+    @Test
+    void testAlterarQuantidadeCarrinhoSemLogar() {
+        CompradorController controller = new CompradorController();
+
+        try {
+            controller.alterarQuantidadeCarrinho("1111", 120);
+            fail();
+        } catch(IllegalStateException e) {
+            assertTrue(true);
+        }
+    }
 }
